src/objects/Summary_Profile__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Includes configuration of which fields to include in Summary Profile document/page.</description>
    <fields>
        <fullName>Affiliations_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Affiliations Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliations_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affiliations Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_Address__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Mailing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Activities__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Maximum Number of Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Affiliations__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Maximum Number of Affiliations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Relationships__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Maximum Number of Relationships</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Activities__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Other Activities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Affiliation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Primary Affiliation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationships_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Relationships Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationships_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Relationships Inactive</label>
        <type>Checkbox</type>
    </fields>
    <label>Summary Profile</label>
</CustomObject>